# pylira

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  README.rst  environment.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_tests.yml  release.yml
docs/: conf.py  index.rst
docs/pylira/: api.rst  changelog.rst  data.rst  developer.rst  index.rst  references.rst  user.rst
docs/pylira/api/: core.rst  data.rst  index.rst  utils.rst
docs/pylira/user/: data.rst  index.rst
docs/pylira/user/tutorials/: index.rst
docs/pylira/user/tutorials/notebooks/: mcmc-deconvolution-intro.md  point_source.md
licenses/: LICENSE.rst
pylira/: __init__.py  conftest.py  core.py
pylira/data/: __init__.py  core.py
pylira/data/files/: output-par.txt  output.txt
pylira/data/tests/: test_core.py
pylira/src/: lira.cpp  lira.h  lirabind.cpp
pylira/tests/: test_core.py
pylira/utils/: convolution.py  io.py  plot.py  priors.py
pylira/utils/tests/: test_io.py  test_plot.py  test_priors.py
