[metadata]
name = pylira
author = pylira developers
author_email = 
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = http://docs.astropy.org/projects/package-template/
description = A Python package for Bayesian low-counts image reconstruction and analysis
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astrostat/pylira

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    numpy
    astropy


[options.extras_require]
all =
    matplotlib
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
pylira = data/*

[tool:pytest]
testpaths = "pylira" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    pylira/_astropy_init*
    pylira/conftest.py
    pylira/*setup_package*
    pylira/tests/*
    pylira/*/tests/*
    pylira/extern/*
    pylira/version*
    */pylira/_astropy_init*
    */pylira/conftest.py
    */pylira/*setup_package*
    */pylira/tests/*
    */pylira/*/tests/*
    */pylira/extern/*
    */pylira/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
