[metadata]
name = pylira
author = pylira developers
author_email =
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://pylira.readthedocs.io/
description = A Python package for Bayesian low-counts image reconstruction and analysis
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astrostat/pylira

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    numpy
    astropy
    pybind11
    matplotlib==3.2.2
    scipy
    regions>=0.7

[options.extras_require]
all =
    ipywidgets
    jupyter
test =
    pytest-astropy
docs =
    sphinx-astropy
    pydata-sphinx-theme
    nbsphinx
    jupytext
    ipykernel
    sphinx-gallery
    scikit-image

[options.package_data]
pylira = data/*/*

[tool:pytest]
testpaths = "pylira" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    pylira/_astropy_init*
    pylira/conftest.py
    pylira/*setup_package*
    pylira/tests/*
    pylira/*/tests/*
    pylira/extern/*
    pylira/version*
    */pylira/_astropy_init*
    */pylira/conftest.py
    */pylira/*setup_package*
    */pylira/tests/*
    */pylira/*/tests/*
    */pylira/extern/*
    */pylira/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[tool:isort]
profile = "black"
sections = STDLIB,PYTEST,NUMPY,ASTROPY,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
no_lines_before = STDLIB,PYTEST,NUMPY,ASTROPY,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_pytest = pytest
known_numpy = numpy,scipy
known_astropy = astropy,regions
known_first_party = jolideco
# Config to make isort compatible with black
# From https://black.readthedocs.io/en/stable/the_black_code_style.html
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88


[flake8]
# https://flake8.pycqa.org/en/latest/user/error-codes.html
# W503: line break before binary operator
ignore = W503,E501,F405
exclude = extern,conftest.py,__init__.py
extend-ignore = E203